<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Name -->
    <string name="app_name">Deliver Menu</string>
    <!-- Message the user gets when the application is launched -->
    <string name="welcome_msg">Welcome to the best Delivery Service</string>
    <!-- Confirmation Title -->
    <string name="confirmation_title">Confirmation</string>
    <!-- Warning Internet Connection -->
    <string name="warning_net">Network problem</string>
    <!-- Checking Internet Connection -->
    <string name="net">Sorry, You don\'t have an Active \n Internet Connection \n Or your device
        may have \network problem.</string>
    <!-- Exit Application -->
    <string name="exit">Exit</string>
    <!-- Retry After Checking Connection -->
    <string name="retry">Retry</string>
    <!-- Facebook Button Message -->
    <string name="join_fb">Sign in with Facebook</string>
    <!-- Register -->
    <string name="name">Name</string>
    <string name="login">Log in</string>
    <string name="register">Register here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="join">Join</string>
    <!-- Register Message -->
    <string name="register_message">Start your experience</string>
    <string name="without_register">Enter without register</string>
    <string name="sign_up">Still not a member? <b>SIGN UP HERE!</b></string>
    <string name="registration_title">Registration</string>
    <string name="registration_warning">Fill up all the fields</string>
    <!-- Wrong user information warning -->
    <string name="user_warning">Wrong email or password</string>
    <!--Main Activity-->
    <string name="main_title">Main Menu</string>
    <!--Category Message-->
    <string name="category_message">Select one of our Categories</string>
    <!--Product Message-->
    <string name="product_title">Products</string>
    <string name="product_message">Select one of our Product</string>
    <string name="product_resume_message">You can add this product to a Shipping order (You
        need to be login)</string>
    <!--Login Message-->
    <string name="successfully_login">Successfully Logged in</string>
    <string name="not_register_user">Not register user. Please sing up or enter
        without registration.</string>
    <!--Sing up Message-->
    <string name="successful_sign_up">Successfully sign up, Please log in.</string>
    <string name="sign_up_error">There was an error, sorry.</string>
    <!--Loading-->
    <string name="loading">Loading</string>
    <!--Order Message-->
    <string name="order">Add to order</string>
    <string name="price">Price: %1$s \$$</string>
    <string name="generate_order">Generate Order</string>
    <string name="order_confirmation">Are you sure do you want to add this product to your order?</string>
    <string name="order_added_confirmation">Product added successfully to your order menu</string>
    <string name="order_already_added_confirmation">Product already added tp your order</string>
    <!--Log out message-->
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="exit_message_user">Are you sure you want to exit? \n You will be log out</string>
    <!-- Lateral Menu-->
    <string name="lateral_menu_title">Option Menu</string>
    <!-- Order Activity-->
    <string name="not_products">There are not products added to the order</string>
    <string name="header_order_message">Generate your order</string>
    <string name="header_order_resume_message">Delete products and select how many of them do you want</string>
    <string name="quantity">Quantity: %1$s</string>
</resources>
